<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_id">ID HERE</string>
    <string name="app_name">Tsunapper: best Android apps</string>
    <string name="action_settings">Settings</string>
    <string name="app_icon">app icon</string>
    <string name="app_screens_button">View app screenshots</string>
    <string name="install_app_button">INSTALL</string>
    <string name="install">INSTALL</string>
    <string name="title_activity_app_detail">App Details</string>
    <string name="description">DESCRIPTION</string>
    <string name="rate_label">RATE</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="images_label">IMAGES</string>
    <string name="account_label">ACCOUNT</string>
    <string name="navigation_label">NAVIGATION</string>
    <string name="open">OPEN</string>
    <string name="uninstall">UNINSTALL</string>
    <string name="loading_dialog_message">Waiting for data</string>
    <string name="loading_dialog_title">Loading...</string>
    <string name="error_dialog_title">Opss...</string>
    <string name="error_dialog_message">Error occured during this session. Please, try again later.</string>
    <string name="ok">OK</string>
    <string name="no_internet_dialog_title">Internet Connection Required</string>
    <string name="no_internet_dialog_message">Please, connect to the Internet and retry</string>

</resources>