<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Gray"
    tools:context=".AppDetailActivity" >

    <com.loopj.android.image.SmartImageView
        android:id="@+id/detail_app_icon"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/app_icon" />

    <TextView
        android:id="@+id/detail_app_title"
        style="@style/AppTitleStyle"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/detail_app_publisher"
        style="@style/LightTextStyle"
        android:layout_below="@id/detail_app_title"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/detail_install_button"
        style="@style/AppActionButtonStyle"
        android:layout_marginTop="45dp"
        android:text="@string/install" />

    <Button
        android:id="@+id/detail_open_button"
        style="@style/AppActionButtonStyle"
        android:text="@string/open" />

    <Button
        android:id="@+id/detail_uninstall_button"
        style="@style/AppActionButtonStyle"
        android:layout_alignParentTop="false"
        android:layout_below="@id/detail_open_button"
        android:layout_marginTop="5dp"
        android:text="@string/uninstall" />

    <View
        style="@style/SeparatorStyle"
        android:layout_below="@id/detail_app_icon"
        android:layout_marginTop="9.5dp" />

    <LinearLayout
        android:id="@+id/detail_gallery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/detail_app_icon"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:orientation="horizontal" >

        <com.loopj.android.image.SmartImageView
            android:layout_width="90dp"
            android:layout_height="170dp"
            android:scaleType="fitXY" />

        <com.loopj.android.image.SmartImageView
            android:layout_width="90dp"
            android:layout_height="170dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:scaleType="fitXY" />

        <com.loopj.android.image.SmartImageView
            android:layout_width="90dp"
            android:layout_height="170dp"
            android:scaleType="fitXY" />
    </LinearLayout>

    <RatingBar
        android:id="@+id/detail_market_rating"
        style="@style/MarketRatingStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/detail_gallery"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="10dp"
        android:isIndicator="true"
        android:numStars="5"
        android:stepSize="0.5" />

    <TextView
        android:id="@+id/detail_market_rating_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/detail_gallery"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_toRightOf="@id/detail_market_rating" />

    <TextView
        android:id="@+id/detail_app_market_downloads"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/detail_market_rating"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp" />

    <View
        android:id="@+id/detail_market_rating_separator"
        style="@style/SeparatorStyle"
        android:layout_below="@id/detail_app_market_downloads"
        android:layout_marginTop="5dp" />

    <RelativeLayout
        android:id="@+id/detail_app_user_rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/detail_market_rating_separator"
        android:layout_marginTop="10dp" >

        <TextView
            android:id="@+id/detail_user_rating_label"
            style="@style/DarkLabelStyle"
            android:layout_marginLeft="5dp"
            android:text="@string/rate_label" />

        <RatingBar
            android:id="@+id/detail_user_rating_bar"
            style="@style/UserRatingStyle"
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:layout_alignParentRight="true"
            android:layout_marginRight="5dp"
            android:gravity="right"
            android:isIndicator="false"
            android:numStars="5"
            android:stepSize="1.0" />
    </RelativeLayout>

    <View
        android:id="@+id/detail_user_rating_separator"
        style="@style/SeparatorStyle"
        android:layout_below="@id/detail_app_user_rating"
        android:layout_marginTop="5dp" />

    <TextView
        android:id="@+id/detail_app_description_label"
        style="@style/DarkLabelStyle"
        android:layout_below="@id/detail_user_rating_separator"
        android:layout_marginTop="10dp"
        android:padding="5dp"
        android:text="@string/description" />

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/detail_app_description_label" >

        <TextView
            android:id="@+id/detail_app_description"
            style="@style/DarkTextStyle"
            android:layout_marginTop="5dp"
            android:padding="5dp" />
    </ScrollView>

</RelativeLayout>